--- a/frontpagestyle.css
+++ b/frontpagestyle.css
@@ -30,14 +30,14 @@ body {
     */
 }
 
-
+/*
 main{
     width: 90vw;
     margin: 0 auto;
     padding: 30px 20px;
     min-height: calc(100vh - 264px - 58px);
 }
-
+*/
 footer{
     text-align: center;
     background-color:rgb(0, 0, 0);
@@ -50,7 +50,7 @@ footer{
     z-index: 12;
 }
 
-
+/*
 .SaydyyKuo{
     position: absolute;
     top: 10%;
@@ -133,7 +133,8 @@ footer{
     z-index: 11;
     cursor: pointer;
 }
-
+*/
+/*
 .wrapper{
     width: 100%;
     height: 100%;
@@ -206,7 +207,7 @@ footer{
     border:2px double #333;
     opacity: .9;
 }
-
+*/
 
 .fa{
     color:white;
