--- a/frontpagestyle.css
+++ b/frontpagestyle.css
@@ -223,13 +223,13 @@ footer{
 }
 .container{
     
-    display: inline-block;
+    display: inline-table;
     list-style: none;
     top:50%;
     left:50%;
     padding:100px;
     z-index: 11;
-    position: relative;
+    
 }
 .content{
     position: absolute;
