--- a/frontpagestyle.css
+++ b/frontpagestyle.css
@@ -225,8 +225,7 @@ footer{
     
     display: left;
     list-style: none;
-    top:80vw;
-    left:0vw;
+    
     padding:100px;
     z-index: 11;
     position: absolute;
@@ -235,10 +234,10 @@ footer{
 .content{
     position: absolute;
     
-    padding:90px;
-    top:55%;
-    left:50%;
-    transform:translate(-50%,-50%);
+    
+    padding-top: 10%;
+    padding-left: 10vw auto;
+    /*transform:translate(-50%,-50%);*/
     width: 100%;
     text-align: center;
     z-index: 11;
