--- a/frontpagestyle.css
+++ b/frontpagestyle.css
@@ -224,10 +224,13 @@ footer{
 
     
 .social{
-    text-align: center;
-    top: 20px;
-    position: left;
-    position: absolute;
+    padding:0px;
+    margin:0px;
+    position:fixed;
+    right:-130px;
+    top:230px;
+    width:210px;
+    z-index: 1100;
     
 }
 .social li{
