--- a/frontpagestyle.css
+++ b/frontpagestyle.css
@@ -40,6 +40,7 @@ main{
 */
 footer{
     text-align: center;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     background-color:rgb(0, 0, 0);
     color: #fff;
     padding: 20px;
