--- a/Aboutpagestyle.css
+++ b/Aboutpagestyle.css
@@ -10,12 +10,13 @@
     padding-bottom: 58px;
     min-height: 100vh;
   }
-  header {
+  /*header {
     text-align: center;
     background-color: rgb(21, 63, 65);
     color: #fff;
     padding: 30px;
   }
+  */
   header h1 {
     font-size: 48px;
     margin-bottom: 30px;
