--- a/Aboutpagestyle.css
+++ b/Aboutpagestyle.css
@@ -3,7 +3,40 @@
     padding: 0;
     box-sizing: border-box;
   }
-  body {
+  .wrapper{
+    width: 100%;
+  }
+  .img-banner{
+    display: none;
+  }
+  >img-info{
+    width: 100%;
+  }
+  .img-info h2{
+    padding: 30px 30px 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    color: aqua;
+    line-height: 44px;
+  }
+  .img-info p{
+    padding: 0px 30px 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    color: aqua;
+    line-height: 24px;
+  }
+  .img-me{
+    width: 100%;
+  }
+  @media only screen and (min-width: 768px) {
+    .img-banner{
+      display: block;
+      width: 100%;
+      padding-bottom: 30px;
+    }
+  }
+  /*body {
     font-family: Arial, Helvetica, sans-serif;
     background-color:black;
     position: relative;
@@ -16,7 +49,7 @@
     color: #fff;
     padding: 30px;
   }
-  */
+  
   header h1 {
     font-size: 48px;
     margin-bottom: 30px;
@@ -30,7 +63,7 @@
     padding: 30px 20px;
     /* min-height: calc(100vh - 211px - 58px); */
   }
-  article {
+ /* article {
     background-color: rgb(21, 63, 66);
     padding: 20px;
     margin-bottom: 20px;
@@ -65,7 +98,7 @@
     z-index: 1; */
   }
   
-  @media(max-width:768px) {
+  /*@media(max-width:768px) {
     header { padding: 30px 20px; }
     header h1 { font-size: 36px; margin-bottom: 22px; }
     header p { font-size: 18px; }
@@ -74,4 +107,4 @@
     article h3 { margin: 10px 0 20px 0; }
     article p { margin-top: 16px; line-height: 20px; }
   }
-
+*/
