--- a/Aboutpagestyle.css
+++ b/Aboutpagestyle.css
@@ -35,6 +35,18 @@
       width: 100%;
       padding-bottom: 30px;
     }
+    .wrapper{
+      width: 600px;
+      margin: 0 auto;
+    }
+    .img-info h2{
+      padding: 20px 0px 0px;
+      
+    }
+    .img-info p{
+      padding: 20px 0px 0px;
+      
+    }
   }
   /*body {
     font-family: Arial, Helvetica, sans-serif;
