--- a/Aboutpagestyle.css
+++ b/Aboutpagestyle.css
@@ -47,7 +47,14 @@
       padding: 20px 0px 0px;
       
     }
+    .img-me{
+      padding-top: 30px;
+    }
   }
+  @media only screen and (min-width: 1000px){
+    
+  }
+
   /*body {
     font-family: Arial, Helvetica, sans-serif;
     background-color:black;
