--- a/Aboutpagestyle.css
+++ b/Aboutpagestyle.css
@@ -124,6 +124,7 @@
     line-height: 24px;
     color: rgba(48, 148, 161, 0.5);
   }
+  */
   footer {
     text-align: center;
     background-color: rgb(0, 0, 0);
