--- a/Aboutpagestyle.css
+++ b/Aboutpagestyle.css
@@ -133,8 +133,8 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    /* position: fixed;
-    z-index: 1; */
+    /* position: fixed;*/
+    z-index: 10; 
   }
   
   /*@media(max-width:768px) {
