--- a/musicstyle.css
+++ b/musicstyle.css
@@ -10,14 +10,39 @@
     display: none;
     cursor: pointer;
   }
+  .img-info{
+    width: 100%;
+  }
+  .img-info h2{
+    padding: 30px 30px 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    color: aqua;
+    line-height: 44px;
+  }
+  iframe{
+    width: 100%;
+  }
+  @media only screen and (min-width: 768px) {
+    .img-banner{
+      display: block;
+      width: 100%;
+      padding-bottom: 30px;
+    }
+    .wrapper{
+      width: 600px;
+      margin: 0 auto;
+    }
+    .img-info h2{
+      padding: 20px 0px 0px;
   /*body {
     font-family: Arial, Helvetica, sans-serif;
     background-color:black;
     position: relative;
     padding-bottom: 58px;
-    /*min-height: 100vh;*/
+    /*min-height: 100vh;
     height: 100%;
-  }
+  }*/
 
   /*header h1 {
     font-size: 48px;
@@ -44,6 +69,7 @@
     position: absolute;
     
   }*/
+  /*
   .aptaakh-khomus{
     text-align: center;
     left: 35%;
@@ -72,6 +98,7 @@
     line-height: 24px;
     color: rgba(48, 148, 161, 0.5);
   }
+  */
   footer {
     text-align: center;
     background-color: rgb(0, 0, 0);
@@ -84,13 +111,5 @@
     z-index: 1; 
   }
   
-  @media(max-width:768px) {
-    header { padding: 30px 20px; }
-    header h1 { font-size: 36px; margin-bottom: 22px; }
-    header p { font-size: 18px; }
-    main { width: 100vw; padding: 20px; }
-    article { margin-bottom: 16px; font-size: 14px; }
-    article h3 { margin: 10px 0 20px 0; }
-    article p { margin-top: 16px; line-height: 20px; }
-  }
+  
 
