--- a/musicstyle.css
+++ b/musicstyle.css
@@ -22,6 +22,7 @@
   }
   iframe{
     width: 100%;
+    
   }
   @media only screen and (min-width: 768px) {
     .img-banner{
@@ -35,6 +36,27 @@
     }
     .img-info h2{
       padding: 20px 0px 0px;
+    }
+    iframe{
+      padding-top: 30px;
+    }
+  }
+  @media only screen and (min-width: 1000px){
+    .wrapper{
+      width: 1000px;
+    }
+    .img-info{
+    width: 50%;
+    float: right;
+    }
+    .img-info h2{
+      padding: 20px 0px 0px 30px;
+    }
+    .img-info p{
+      padding: 20px 0px 0px 30px;
+        
+    }
+  }
   /*body {
     font-family: Arial, Helvetica, sans-serif;
     background-color:black;
