--- a/musicstyle.css
+++ b/musicstyle.css
@@ -128,6 +128,7 @@
   */
   footer {
     text-align: center;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     background-color: rgb(0, 0, 0);
     color: #fff;
     padding: 20px;
