--- a/musicstyle.css
+++ b/musicstyle.css
@@ -138,7 +138,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    position: fixed;
+    position: absolute;
     z-index: 1; 
   }
   
