--- a/musicstyle.css
+++ b/musicstyle.css
@@ -135,10 +135,9 @@
     background-color: rgb(0, 0, 0);
     color: #fff;
     padding: 20px;
-    position: absolute;
     bottom: 0;
     width: 100%;
-    position: absolute;
+    position: relative;
     z-index: 1; 
   }
   
