--- a/musicstyle.css
+++ b/musicstyle.css
@@ -137,7 +137,7 @@
     padding: 20px;
     bottom: 0;
     width: 100%;
-    position: relative;
+    position: absolute;
     z-index: 1; 
   }
   
