--- a/contactstyle.css
+++ b/contactstyle.css
@@ -13,6 +13,16 @@
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
   }
+  .wrapper{
+    width: 100%;
+  }
+  .img-banner{
+    display: none;
+    cursor: pointer;
+  }
+  .img-info{
+    width: 100%;
+  }
 /*
   header {
     text-align: center;
