--- a/contactstyle.css
+++ b/contactstyle.css
@@ -20,8 +20,30 @@
     display: none;
     cursor: pointer;
   }
-  .img-info{
+  .img-me{
     width: 100%;
+  }
+  @media only screen and (min-width: 768px) {
+    .img-banner{
+      display: block;
+      width: 100%;
+      padding-bottom: 30px;
+    }
+    .wrapper{
+      width: 600px;
+      margin: 0 auto;
+    }
+    .img-info h2{
+      padding: 20px 0px 0px;
+      
+    }
+    .img-info p{
+      padding: 20px 0px 0px;
+      
+    }
+    .img-me{
+      padding-top: 30px;
+    }
   }
 /*
   header {
