--- a/css/Aboutpagestyle.css
+++ b/css/Aboutpagestyle.css
@@ -101,8 +101,8 @@
     width: 90vw;
     margin: 0 auto;
     padding: 30px 20px;
-    /* min-height: calc(100vh - 211px - 58px); 
-  }*/
+    /* min-height: calc(100vh - 211px - 58px); */
+  }
  /* article {
     background-color: rgb(21, 63, 66);
     padding: 20px;
