--- a/Blogstyle.css
+++ b/Blogstyle.css
@@ -1,9 +1,8 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
-  
   .wrapper{
     width: 100%;
   }
@@ -20,16 +19,13 @@
     font-size: 50px;
     color: aqua;
     line-height: 44px;
+    text-align: center;
+    text-decoration-style: none;
+
   }
-  .img-info p{
-    padding: 0px 30px 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    color: aqua;
-    line-height: 24px;
-  }
-  .img-me{
+  iframe{
     width: 100%;
+    
   }
   @media only screen and (min-width: 768px) {
     .img-banner{
@@ -43,13 +39,8 @@
     }
     .img-info h2{
       padding: 20px 0px 0px;
-      
     }
-    .img-info p{
-      padding: 20px 0px 0px;
-      
-    }
-    .img-me{
+    iframe{
       padding-top: 30px;
     }
   }
@@ -57,21 +48,33 @@
     .wrapper{
       width: 1000px;
     }
-    .img-info{
+    .etekh{
     width: 50%;
     float: right;
     }
     .img-info h2{
       padding: 20px 0px 0px 30px;
-      
     }
-    .img-info p{
+    .img-info iframe{
       padding: 20px 0px 0px 30px;
-      
+        
     }
-    .img-me{
-    padding-top: 0px;
+    .aptaakh-khomus{
+      padding-top: 0px;
     width: 50%;
     float: left;
     }
+  }
+
+  footer {
+    text-align: center;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background-color: rgb(0, 0, 0);
+    color: #fff;
+    padding: 20px;
+    bottom: 0;
+    width: 100%;
+    position: relative;
+    clear: both;
+    z-index: 10; 
   }
