--- a/contactstyle.css
+++ b/contactstyle.css
@@ -159,6 +159,7 @@
 
   footer {
     text-align: center;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     background-color: rgb(0, 0, 0);
     color: #fff;
     padding: 20px;
