--- a/contactstyle.css
+++ b/contactstyle.css
@@ -31,7 +31,6 @@
 }
 .fb-page{
   width: 100%;
-  margin-left: 30px;
 }
 @media only screen and (min-width: 768px) {
   .img-banner{
@@ -53,6 +52,7 @@
   }
   .fb-page{
     padding-top: 30px;
+    padding-left: 30px;
   }
 }
 @media only screen and (min-width: 1000px){
