--- a/newsstyle.css
+++ b/newsstyle.css
@@ -13,6 +13,9 @@
   .img-info{
     width: 100%;
   }
+  .head {
+      color: aqua;
+  }
   .img-info h2{
     padding: 30px 30px 20px;
     font-family: Arial, Helvetica, sans-serif;
